Add insta/story inline query RapidAPI keys are imported by prefix and removed when the limit is reached Inline queries are now more accurate + deno fmt

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-TELEGRAM_API_KEY="yourkeys"
-RAPID_KEY1="1"
-RAPID_KEY2="2"
-RAPID_KEY3="3"
+# Example file shows minumal environment setup to run the app
+BOT_NAME="Your bot name"
+BOT_USERNAME="Your bot @username (without @)"
+TELEGRAM_API_KEY="Telegram bot api key (get from @botfather)"
+# You can add as many Rapid API keys to balance limits using prefix RAPID_KEY.
+# One of them will be randomly chosen before each request 
+# When a key reaches the request limit it is removed from the env so it won't be used again
+RAPID_KEY="Rapid API key which will be used to request RocketAPI to retrive insta content"
+# RAPID_KEY2="2"
+# RAPID_KEY3="3"
+
